fix: try to hide overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 .bodywraper{
   /*  width:99vw;
     height:650px;*/
-   /* overflow:hidden;*/
+   overflow:hidden;
 }
 .header{
     color:white;
@@ -253,7 +253,7 @@ body{
         
         100%{
             transform:translate(80vw,100vh) ;
-            opacity:0.5;
+            opacity:0;
             background-color: black;
         } 
     }
